--- a/tku/P3/myclass.css
+++ b/tku/P3/myclass.css
@@ -1,8 +1,11 @@
-table{
+ table{
     width: 700px;
     height: 900px;
     border: 3px solid orange;
     padding:2px;
+    margin-top: 120px;
+    margin-left:auto; 
+    margin-right:auto;
 }
 
 .A{
@@ -26,7 +29,7 @@ table{
     text-align: center;
 }
 
-.AA{
+ .AA{
     background-color: rgb(124, 79, 212);
     font-weight: 600;
     font-size: 30px;
@@ -35,29 +38,27 @@ table{
     text-align: center;
 }
 
-.E{
+ .E{
     background-color: rgb(165, 136, 224);
     border: 1px solid black;
     text-align: center;
     font-size: 25px;
 }
 
-.F{
+ .F{
     background-color: rgb(47, 47, 114);
     border: 1px solid black;
     text-align: center;
     color: white;
     font-size: 25px;
 }
-
-.G{
+ .G{
     background: rgb(134, 185, 216);
     border: 1px solid black;
     text-align: center;
     font-size: 20px;
 }
-
-.H{
+ .H{
     background-color: rgb(182, 157, 206);
     border: 1px solid black;
     font-size: 20px;
