--- a/tku/第七次作業/css/tku60.css
+++ b/tku/第七次作業/css/tku60.css
@@ -1,8 +1,11 @@
 #container {
-    width: 930px;
+    width: 940px;
     height: 480px;
     border: 5px solid #9ce329;
-    background-color: beige
+    background-color: beige;
+    margin-top: 120px;
+    margin-left:auto; 
+    margin-right:auto;
 }
 
 #player {
