--- a/tku/第五次作業/photo.css
+++ b/tku/第五次作業/photo.css
@@ -2,6 +2,8 @@ img {
     width: 30%;
     margin : 1.667%;
     float: left;
+    margin-top: 120px;
+
 }
 
 p {
@@ -13,4 +15,7 @@ p {
     border-bottom: 2px solid gray;
     width: 30%;
     margin-left: 1.66%;
+    position: relative;
+    top: 120px;
+
 }
