--- a/tku/第八次作業/css/bomber.css
+++ b/tku/第八次作業/css/bomber.css
@@ -1,8 +1,12 @@
-body {
+form {
     width: 400px;
     border: 10px solid #b50f0f;
     text-align: center;
+    margin-top: 120px;
+    margin-left:auto; 
+    margin-right:auto;
 }
+
 
 input {
     margin: 10px;
